force-app/main/default/objects/Board_Members_District360__c/Board_Members_District360__c.object-meta.xml
<CustomObject>
    <description>Board Members are used to capture any individual&apos;s board information like board start date, board member status etc</description>
    <label>Board Members</label>
    <nameField>
        <displayFormat>BM-{0000}</displayFormat>
        <label>Board Members Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Board Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>