force-app/main/default/objects/Board_Members_District360__c/fields/BID_Board_Member_Status_District360__c.field-meta.xml
<CustomField>
    <fullName>BID_Board_Member_Status_District360__c</fullName>
    <inlineHelpText>Update the status of the Contact&apos;s Board Tenure.</inlineHelpText>
    <label>BID Board Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Board Member</fullName>
            </value>
            <value>
                <fullName>Former Board Member</fullName>
            </value>
            <value>
                <fullName>Prospective Board Member</fullName>
            </value>
            <value>
                <fullName>Declined Board Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>