force-app/main/default/objects/Board_Members_District360__c/fields/BID_Board_Officer_Position_District360__c.field-meta.xml
<CustomField>
    <fullName>BID_Board_Officer_Position_District360__c</fullName>
    <inlineHelpText>Select a relevant Board Officer Position if relevant.</inlineHelpText>
    <label>BID Board Officer Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member-at-Large</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>