force-app/main/default/objects/Board_Members_District360__c/fields/BID_Board_Type_District360__c.field-meta.xml
<CustomField>
    <fullName>BID_Board_Type_District360__c</fullName>
    <inlineHelpText>Select which Board this Contact serves on.</inlineHelpText>
    <label>BID Board Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BID Board</fullName>
            </value>
            <value>
                <fullName>Foundation Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>