force-app/main/default/objects/Board_Members_District360__c/fields/Board_Departure_Date_District360__c.field-meta.xml
<CustomField>
    <fullName>Board_Departure_Date_District360__c</fullName>
    <label>Board Departure Date</label>
    <type>Date</type>
</CustomField>