force-app/main/default/objects/Board_Members_District360__c/fields/Board_District360__c.field-meta.xml
<CustomField>
    <fullName>Board_District360__c</fullName>
    <label>Board</label>
    <referenceTo>Board_District360__c</referenceTo>
    <relationshipLabel>Board Members</relationshipLabel>
    <relationshipName>Board_Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>