force-app/main/default/objects/Board_Members_District360__c/fields/Board_Member_History_District360__c.field-meta.xml
<CustomField>
    <fullName>Board_Member_History_District360__c</fullName>
    <inlineHelpText>Add any supplemental or helpful information regarding the Contact&apos;s Board Tenure.</inlineHelpText>
    <label>Board Member History</label>
    <type>TextArea</type>
</CustomField>