force-app/main/default/objects/Board_Members_District360__c/fields/Contact_District360__c.field-meta.xml
<CustomField>
    <fullName>Contact_District360__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Board_of_Directors_District360</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>