force-app/main/default/objects/Board_Members_District360__c/fields/Contact_Full_Name_District360__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name_District360__c</fullName>
    <formula>Contact_District360__r.FirstName +&apos; &apos;+ Contact_District360__r.LastName</formula>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>