force-app/main/default/objects/Board_Members_District360__c/fields/Interest_and_Expertise_District360__c.field-meta.xml
<CustomField>
    <fullName>Interest_and_Expertise_District360__c</fullName>
    <inlineHelpText>Add any relevant interest or expertise that should be noted and tracked for this Board Member.</inlineHelpText>
    <label>Interest and Expertise</label>
    <type>TextArea</type>
</CustomField>