force-app/main/default/objects/Board_Members_District360__c/fields/Representation_District360__c.field-meta.xml
<CustomField>
    <fullName>Representation_District360__c</fullName>
    <inlineHelpText>Select what type of representation this Board Member fulfills.</inlineHelpText>
    <label>Representation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Owners</fullName>
            </value>
            <value>
                <fullName>Merchants</fullName>
            </value>
            <value>
                <fullName>BID Board Appointed</fullName>
            </value>
            <value>
                <fullName>Foundation Elected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>