force-app/main/default/objects/Board_Members_District360__c/fields/Sponsor_Comments_District360__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Comments_District360__c</fullName>
    <label>Sponsor Comments</label>
    <type>TextArea</type>
</CustomField>