force-app/main/default/objects/Board_Members_District360__c/fields/Sponsor_Status_District360__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Status_District360__c</fullName>
    <label>Sponsor Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current Sponsor</fullName>
            </value>
            <value>
                <fullName>Former Sponsor</fullName>
            </value>
            <value>
                <fullName>Prospective Sponsor</fullName>
            </value>
            <value>
                <fullName>Declined Sponsorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>