force-app/main/default/objects/Board_Members_District360__c/fields/Term_Expires_District360__c.field-meta.xml
<CustomField>
    <fullName>Term_Expires_District360__c</fullName>
    <inlineHelpText>Please designate the year the member term expires.</inlineHelpText>
    <label>Term Expires</label>
    <length>255</length>
    <type>Text</type>
</CustomField>