force-app/main/default/objects/Board_Members_District360__c/fields/Value_Add_Potential_District360__c.field-meta.xml
<CustomField>
    <fullName>Value_Add_Potential_District360__c</fullName>
    <inlineHelpText>What will the contact specifically bring to enhance the Board of Directors?</inlineHelpText>
    <label>Value Add Potential</label>
    <type>TextArea</type>
</CustomField>